fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,8 @@ article p {
 	position: relative;
 	padding: 10px;
 	padding-left: 50px;
-	margin: 20px;
+	margin: 0 auto;
+	margin-bottom: 20px;
 	position: relative;
 }
 
@@ -175,6 +176,8 @@ article p {
 }
 
 .project-detail {
+	margin: 0 auto;
+	margin-bottom: 30px;
 	padding-top: 0px;	
 	padding-left: 100px;
 	width: 85%;
